--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta property="og:title" content="Cheok Hong Design">
+  <meta property="og:title" content="Hong Design">
   <meta property="og:description" content="Hi, I'm Hong, a Vancouver based Graphic & Product Designer.">
   <meta property="og:image" content="images/share-icon.jpg">
   <meta property="og:image:width" content="auto">
