--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <header class="header is-flex">
           <h1 class="header-title">HONG DESIGN</h1>
           <button class="theme-toggle" id="themeToggle">
-            <img src="images/mode.png" alt="Mode" style="height:15px; width: auto;">
+            <img src="images/mode.png" alt="MODE" style="height:15px; width: auto;">
           </button>
         </header>
         <main>
